--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -4,8 +4,9 @@
     align-items: center;
     justify-content: center;
     color: white;
-    background-image: url('https://i.pinimg.com/originals/ab/b1/8b/abb18b3ff9da8c65e6936f27476f7603.gif');
+    background-image: url('https://mir-s3-cdn-cf.behance.net/project_modules/disp/fae37c30971807.563b2b1371d80.gif');
     background-repeat: no-repeat;
+    font-weight: bold;
     background-size: cover;
 }
 .few-clouds{
@@ -16,6 +17,7 @@
     color: black;
     background-image: url('https://i.pinimg.com/originals/bc/ff/5b/bcff5be84984b38578d472b33e9a66b7.gif');
     background-repeat: no-repeat;
+    font-weight: bold;
     background-size: cover;
 }
 .scattered-clouds{
@@ -23,6 +25,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    font-weight: bold;
     color: black;
     background-image: url('https://i.pinimg.com/originals/bc/ff/5b/bcff5be84984b38578d472b33e9a66b7.gif');
     background-repeat: no-repeat;
@@ -33,6 +36,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    font-weight: bold;
     color: black;
     background-image: url('https://i.pinimg.com/originals/64/8f/0f/648f0f2dad03c3a0adbbda57c7df7e60.gif');
     background-repeat: no-repeat;
@@ -41,6 +45,7 @@
 .shower-rain{
     display: flex;
     flex-direction: column;
+    font-weight: bold;
     align-items: center;
     justify-content: center;
     color: black;
@@ -53,6 +58,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    font-weight: bold;
     color: white;
     background-image: url('https://i.pinimg.com/originals/1d/07/bc/1d07bc543b5848be59f821d8889c1091.gif');
     background-repeat: no-repeat;
@@ -63,6 +69,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    font-weight: bold;
     color: black;
     background-image: url('https://i.pinimg.com/originals/dd/f1/48/ddf1482dcd4dc5fc267cfa0a6c0cd720.gif');
     background-repeat: no-repeat;
@@ -74,6 +81,7 @@
     align-items: center;
     justify-content: center;
     color: black;
+    font-weight: bold;
     background-image: url('https://64.media.tumblr.com/c5473bf66524bb7a55eab6eb42217203/tumblr_nq01giusiZ1t19jpho1_500.gif');
     background-repeat: no-repeat;
     background-size: cover;
@@ -84,6 +92,7 @@
     align-items: center;
     justify-content: center;
     color: black;
+    font-weight: bold;
     background-image: url('https://c.tenor.com/5ImWLS5QAJgAAAAC/foggy-fog.gif');
     background-repeat: no-repeat;
     background-size: cover;
@@ -94,6 +103,7 @@
     align-items: center;
     justify-content: center;
     color: rgb(242, 41, 41);
+    font-weight: bold;
     background-image: url('https://thumbs.gfycat.com/DeliciousUnfortunateCockroach-size_restricted.gif');
     background-repeat: no-repeat;
     background-size: cover;
@@ -104,6 +114,7 @@
     align-items: center;
     justify-content: center;
     color: black;
+    font-weight: bold;
     background-image: url('https://i.gifer.com/XFbw.gif');
     background-repeat: no-repeat;
     background-size: cover;
@@ -128,8 +139,8 @@ form {
 }
 
 .cityName{
-    font-size: 1.5rem;
-    margin-top: 4rem;
+    font-size: 3rem;
+    margin-top: 2rem;
 }
 
 .div1{
